--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,6 @@
-# dependencies
-node_modules/
-
-# IDE
-/.idea
-/.awcache
-/.vscode
-/.devcontainer
-*.code-workspace
-
-# bundle
-packages/**/*.d.ts
-packages/**/*.js
-/dist
-
-# misc
-.DS_Store
-lerna-debug.log
+node_modules
+build
 npm-debug.log
-yarn-error.log
-/**/npm-debug.log
-/packages/**/.npmignore
-/packages/**/LICENSE
-
-# example
-/quick-start
-/example_dist
-/example
-
-# tests
-/test
-/benchmarks/memory
-/coverage
-/.nyc_output
-/packages/graphql
-/benchmarks/memory
-build/config\.gypi
-
-# Sensitive
+.nyc
 .env
+.DS_Store
