--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Docker image
         run: |
           docker-compose up -d --build
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker/login-action@v1
           docker push afrezefond/form-api-test:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
